# 5008_final_project

./: .gitignore  CMakeLists.txt  README.md
src/: snake  snake.c  snake_game.h  snake_implement.c  snake_singly.c  snake_singly.h  snake_singly_implement.c  testing.c
src/output/: snake_game
